Minor style changes Fix: publication archive page not showing publications of nepali publications.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -44,37 +44,41 @@ html {
     scroll-behavior: smooth;
 }
 
+html::-webkit-scrollbar {
+    width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+    background-color: var(--scrollbarBG);
+    border: 3px solid var(--scrollbarBG);
+
+}
+
+html::-webkit-scrollbar-thumb, html::-webkit-scrollbar-buttons {
+    background-color: var(--thumbBG);
+    border-radius: 6px;
+}
+
 body {
     position: relative;
     background-color: var(--color-body-bg);
     color: var(--chakra-colors-gray-600);
-    font-family: 'Inter , ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", -apple-system, BlinkMacSystemFont, "Segoe UI Emoji",Segoe UI Symbol, "Noto Color Emoji"';
+    font-family: var(--chakra-fonts-body);
     font-weight: normal;
     font-size: 16px;
     line-height: 1.2;
     word-break: break-word;
+    font-kerning: normal;
     text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: normal;
+    -webkit-font-feature-settings: normal;
+    -moz-font-feature-settings: normal;
     overscroll-behavior: none;
-    scrollbar-width: thin;
-    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
-    --scrollbar-width-legacy: 11px;
+
 }
 
-body::-webkit-scrollbar {
-    width: 11px;
-}
 
-body::-webkit-scrollbar-track {
-    background: var(--scrollbarBG);
-}
 
-body::-webkit-scrollbar-thumb {
-    background-color: var(--thumbBG);
-    border-radius: 6px;
-    border: 3px solid var(--scrollbarBG);
-}
 
 img,
 picture,
@@ -147,14 +151,13 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-.glassbox::-webkit-scrollbar {
+.scroll-container::-webkit-scrollbar {
     display: none;
     width: none;
 }
 
-.glassbox {
+.scroll-container {
     -ms-overflow-styles: none;
-    -webkit-scrollbar-width: none;
     scrollbar-width: none;
 }
 
